# slm-agentic-benchmarking

./: .dockerignore.planbench  .gitignore  CLAUDE.md  Dockerfile.planbench  EXPLANATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RUN_COMMANDS.md  SEQUENCE_MODE_SETUP.md  benchmark_runner.py  docker-compose.planbench.yml  pyproject.toml  run_benchmark.py
.claude/: plan-remove-crewai-ollama.md  settings.local.json
benchmarks/plan_bench/: README.md  pr-new-domain.pddl  pr-new-problem.pddl
docs/: EXPLANATION.md  PLAN.md
docs/criticality/: PLAN.md
results/: bertscore_comparison.json  bertscore_deberta_xlarge_comparison.json  bigbench_skill_join.json  combined_benchmark_results.aux  combined_benchmark_results.out  combined_benchmark_results.tex  full_run_20260210_230933.json  stats_for_latex.json
results/2_18_26/: benchmark_results.tex
results/2_25_26/: benchmark_results.tex
results/3_11_26/: benchmark_results.tex
results/3_5_26/: benchmark_results.tex
results/bigbench_lite/: sweep_summary_20260305_170943.json  sweep_summary_20260305_171043.json  sweep_summary_20260307_044006.json  sweep_summary_20260311_171116.json
results/bigbench_lite_chained/: sweep_summary_20260311_173213.json  sweep_summary_20260312_093423.json  sweep_summary_20260312_100100.json  sweep_summary_20260312_161103.json
results/combined/: combined_run_20260225_034113.json  combined_run_20260225_035229.json  combined_run_20260225_040156.json  combined_run_20260225_041836.json  combined_run_20260225_042118.json  combined_run_20260225_042514.json  combined_run_20260225_071053.json
results/criticality_v2/: run_20260207_fixed_v2_results.md  run_20260207_fixed_v2_results.tex  run_20260207_sequence_diagnosis.json  run_20260207_sequence_diagnosis.md  (+1 more)
scripts/: agent_check_planning.sh  check_summarization_100_done.sh  check_sweep_status.py  check_sweep_status.sh  generate_correlation_map.py  generate_results_report.py  generate_skill_correlation_map.py  get_best_models_per_skill.py  join_bigbench_skill_scores.py  modal_ollama_bigbench.py  planning_status.py  plot_skill_vs_bigbench.py  poll_planning_progress.py  pull_review_data.py  reevaluate_bfcl.py  rescore_bertscore.py  run_azure_planbench.py  run_bigbench_comparison.py  run_bigbench_lite_sweep.py  run_ollama_benchmarks.py  run_plan_bench_ollama_with_poll.py  run_planbench_container.sh  run_with_monitor.py  test_criticality_v2_sequence.py  test_plan_bench_live.py  test_planning_benchmark.py
src/: __init__.py
src/agents/: __init__.py  (+10 more)
tests/: __init__.py
val_api/: Dockerfile  main.py
(+1243 files in other folders)
