[tool.poetry]
name = "slm-agentic-benchmarking"
version = "0.1.0"
description = "Benchmarking framework for evaluating SLMs in agentic architectures"
authors = [
    "Samih Qureshi",
    "Fiona Han",
    "Justin Yang",
]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"

# Core frameworks
crewai = "^0.80.0"
litellm = "^1.40.0"
setuptools = "^70.0.0"

# Azure
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"

# HuggingFace datasets (for benchmarks)
datasets = "^2.14.0"
rouge-score = "^0.1.2"
evaluate = "^0.4.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
tqdm = "^4.66.0"
rich = "^13.0.0"

# Async support
aiohttp = "^3.9.0"

# PlanBench (PDDL planning benchmark)
tarski = "^0.7.0"
pddl = "^0.2.0"

# Criticality v2 sequence scoring
openai = "^1.7.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
llama-cpp-python = {version = "^0.3.0", optional = true}
bert-score = "^0.3.13"
torch = "^2.10.0"
transformers = "^5.2.0"
modal = "^1.3.5"

[tool.poetry.extras]
sequence = ["llama-cpp-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
